--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,19 +7,22 @@
     "start": "next start"
   },
   "dependencies": {
-    "next": "^14.0.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "next-auth": "^4.24.5",
+    "@stripe/stripe-js": "^2.4.0",
     "axios": "^1.6.2",
+    "clsx": "^2.1.1",
     "date-fns": "^3.0.6",
-    "react-calendar": "^4.7.0",
     "framer-motion": "^10.16.16",
-    "@stripe/stripe-js": "^2.4.0"
+    "lucide-react": "^0.563.0",
+    "next": "^14.0.4",
+    "next-auth": "^4.24.5",
+    "react": "^18.2.0",
+    "react-calendar": "^4.7.0",
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
-    "tailwindcss": "^3.4.0",
+    "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss": "^3.4.0"
   }
 }
